--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^6.11.1",
     "multer": "^2.0.1",
     "next": "15.3.5",
+    "next-auth": "^4.24.11",
     "next-connect": "^0.12.2",
     "node-fetch": "^3.3.2",
     "react": "^19.0.0",
