--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@azure/core-auth": "^1.9.0",
     "@azure/ms-rest-js": "^2.7.0",
     "@prisma/client": "^6.11.1",
+    "bcryptjs": "^3.0.2",
     "multer": "^2.0.1",
     "next": "15.3.5",
     "next-auth": "^4.24.11",
