--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@azure/ms-rest-js": "^2.7.0",
     "@prisma/client": "^6.11.1",
     "bcryptjs": "^3.0.2",
+    "browser-image-compression": "^2.0.2",
     "mongoose": "^8.16.2",
     "multer": "^2.0.1",
     "next": "15.3.5",
