--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^6.11.1",
     "bcryptjs": "^3.0.2",
     "browser-image-compression": "^2.0.2",
+    "chart.js": "^4.5.0",
     "mongoose": "^8.16.2",
     "multer": "^2.0.1",
     "next": "15.3.5",
@@ -23,6 +24,7 @@
     "next-connect": "^0.12.2",
     "node-fetch": "^3.3.2",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2"
   },
